# eos-sidechain-plugin

./: README.md
client_plugin/: CMakeLists.txt
sync_api_plugin/: CMakeLists.txt  sync_api_plugin.cpp
sync_api_plugin/include/eosio/sync_api_plugin/: sync_api_plugin.hpp
sync_plugin/: CMakeLists.txt  sync_plugin.cpp
sync_plugin/include/eosio/sync_plugin/: sync_plugin.hpp
